Fixed Overflow and padding issues sitewide

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -108,6 +108,7 @@ h1 {
 
 .what-we-do {
     background-color: #404141;
+    padding: 0rem;
  }
 
 .wwd-card {
@@ -131,7 +132,7 @@ h1 {
 /* -------- Fire & Acoustics --------*/
 
 .faa-format {
-    padding-bottom: 5rem;
+    padding: 0rem, 0rem, 5rem, 0rem;
 }
 
 .faa-font-format {
@@ -160,7 +161,7 @@ h1 {
 .icon {
     border-radius: 50%;
     border-style: solid;
-    max-width: 30%;
+    max-width: 50%;
     display: block;
     margin-left: auto;
     margin-right: auto;
